// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RendererSelector should render grid list 1`] = `
<VirtualizedList(ListGrid)
  collection={
    Array [
      Object {
        "description": "This comes from first element in collection",
        "id": 0,
        "name": "Title from first item",
      },
      Object {
        "description": "This comes from second element in collection",
        "id": 1,
        "name": "Title from second item",
      },
    ]
  }
  height={600}
  id="my-list-id"
  isSelected={[Function]}
  rowHeight={50}
  rowRenderer={[Function]}
  selectionToggle={[Function]}
  width={1024}
>
  <Column
    cellDataGetter={[Function]}
    cellRenderer={[Function]}
    dataKey="id"
    flexGrow={0}
    flexShrink={0}
    headerRenderer={[Function]}
    label="Id"
    style={Object {}}
    width={50}
  />
  <Column
    cellDataGetter={[Function]}
    cellRenderer={[Function]}
    dataKey="name"
    flexGrow={0}
    flexShrink={0}
    headerRenderer={[Function]}
    label="Name"
    style={Object {}}
    width={350}
  />
  <Column
    cellDataGetter={[Function]}
    cellRenderer={[Function]}
    dataKey="name"
    flexGrow={0}
    flexShrink={0}
    headerRenderer={[Function]}
    label="Description"
    style={Object {}}
    width={350}
  />
</VirtualizedList(ListGrid)>
`;

exports[`RendererSelector should render table list by default 1`] = `
<VirtualizedList(ListTable)
  collection={
    Array [
      Object {
        "description": "This comes from first element in collection",
        "id": 0,
        "name": "Title from first item",
      },
      Object {
        "description": "This comes from second element in collection",
        "id": 1,
        "name": "Title from second item",
      },
    ]
  }
  height={600}
  id="my-list-id"
  isSelected={[Function]}
  selectionToggle={[Function]}
  sort={[Function]}
  sortBy="name"
  sortDirection="DESC"
  width={1024}
>
  <Column
    cellDataGetter={[Function]}
    cellRenderer={[Function]}
    dataKey="id"
    flexGrow={0}
    flexShrink={0}
    headerRenderer={[Function]}
    label="Id"
    style={Object {}}
    width={50}
  />
  <Column
    cellDataGetter={[Function]}
    cellRenderer={[Function]}
    dataKey="name"
    flexGrow={0}
    flexShrink={0}
    headerRenderer={[Function]}
    label="Name"
    style={Object {}}
    width={350}
  />
  <Column
    cellDataGetter={[Function]}
    cellRenderer={[Function]}
    dataKey="name"
    flexGrow={0}
    flexShrink={0}
    headerRenderer={[Function]}
    label="Description"
    style={Object {}}
    width={350}
  />
</VirtualizedList(ListTable)>
`;

exports[`RendererSelector should render table list when requested 1`] = `
<VirtualizedList(ListTable)
  collection={
    Array [
      Object {
        "description": "This comes from first element in collection",
        "id": 0,
        "name": "Title from first item",
      },
      Object {
        "description": "This comes from second element in collection",
        "id": 1,
        "name": "Title from second item",
      },
    ]
  }
  height={600}
  id="my-list-id"
  isSelected={[Function]}
  selectionToggle={[Function]}
  sort={[Function]}
  sortBy="name"
  sortDirection="DESC"
  width={1024}
>
  <Column
    cellDataGetter={[Function]}
    cellRenderer={[Function]}
    dataKey="id"
    flexGrow={0}
    flexShrink={0}
    headerRenderer={[Function]}
    label="Id"
    style={Object {}}
    width={50}
  />
  <Column
    cellDataGetter={[Function]}
    cellRenderer={[Function]}
    dataKey="name"
    flexGrow={0}
    flexShrink={0}
    headerRenderer={[Function]}
    label="Name"
    style={Object {}}
    width={350}
  />
  <Column
    cellDataGetter={[Function]}
    cellRenderer={[Function]}
    dataKey="name"
    flexGrow={0}
    flexShrink={0}
    headerRenderer={[Function]}
    label="Description"
    style={Object {}}
    width={350}
  />
</VirtualizedList(ListTable)>
`;
